Prevent charts dropdown box from overflowing
Because Google updated its css classes!

--- a/war/styles/rats.css
+++ b/war/styles/rats.css
@@ -57,7 +57,7 @@ hr.footer-line {
 /* Google Visualization UI
 ********************************************************/
 
-.goog-menu-vertical {
+.charts-menu-vertical {
 	max-height: 30em;
 	overflow-y: auto;
 	z-index: 15;
